--- a/clfs_sysvinit_20170702_x86_64_multilib/chroot/sources/kernel.conf
+++ b/clfs_sysvinit_20170702_x86_64_multilib/chroot/sources/kernel.conf
@@ -4774,6 +4774,7 @@ CONFIG_FB_HGA=m
 CONFIG_FB_OPENCORES=m
 CONFIG_FB_S1D13XXX=m
 CONFIG_FB_NVIDIA=m
+CONFIG_FB_EFI=y
 CONFIG_FB_NVIDIA_I2C=y
 # CONFIG_FB_NVIDIA_DEBUG is not set
 CONFIG_FB_NVIDIA_BACKLIGHT=y
@@ -4903,7 +4904,7 @@ CONFIG_VGA_CONSOLE=y
 CONFIG_DUMMY_CONSOLE=y
 CONFIG_DUMMY_CONSOLE_COLUMNS=80
 CONFIG_DUMMY_CONSOLE_ROWS=25
-CONFIG_FRAMEBUFFER_CONSOLE=m
+CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
 CONFIG_LOGO=y
