--- a/clfs_sysvinit_20170702_x86_64_multilib/chroot/sources/kernel.conf
+++ b/clfs_sysvinit_20170702_x86_64_multilib/chroot/sources/kernel.conf
@@ -1422,7 +1422,7 @@ CONFIG_HMC6352=m
 CONFIG_DS1682=m
 # CONFIG_TI_DAC7512 is not set
 CONFIG_VMWARE_BALLOON=m
-CONFIG_PCH_PHUB=m
+CONFIG_PCH_PHUB=y
 CONFIG_USB_SWITCH_FSA9480=m
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 CONFIG_SRAM=y
@@ -1455,45 +1455,45 @@ CONFIG_SENSORS_LIS3_I2C=m
 # Altera FPGA firmware download module
 #
 CONFIG_ALTERA_STAPL=m
-CONFIG_INTEL_MEI=m
+CONFIG_INTEL_MEI=y
 CONFIG_INTEL_MEI_ME=m
 CONFIG_INTEL_MEI_TXE=m
-CONFIG_VMWARE_VMCI=m
+CONFIG_VMWARE_VMCI=y
 
 #
 # Intel MIC Bus Driver
 #
-CONFIG_INTEL_MIC_BUS=m
+CONFIG_INTEL_MIC_BUS=y
 
 #
 # SCIF Bus Driver
 #
-CONFIG_SCIF_BUS=m
+CONFIG_SCIF_BUS=y
 
 #
 # VOP Bus Driver
 #
-CONFIG_VOP_BUS=m
+CONFIG_VOP_BUS=y
 
 #
 # Intel MIC Host Driver
 #
-CONFIG_INTEL_MIC_HOST=m
+# CONFIG_INTEL_MIC_HOST is not set
 
 #
 # Intel MIC Card Driver
 #
-CONFIG_INTEL_MIC_CARD=m
+# CONFIG_INTEL_MIC_CARD is not set
 
 #
 # SCIF Driver
 #
-CONFIG_SCIF=m
+CONFIG_SCIF=y
 
 #
 # Intel MIC Coprocessor State Management (COSM) Drivers
 #
-CONFIG_MIC_COSM=m
+CONFIG_MIC_COSM=y
 
 #
 # VOP Driver
@@ -1522,8 +1522,8 @@ CONFIG_SCSI_PROC_FS=y
 #
 # SCSI support type (disk, tape, CD-ROM)
 #
-CONFIG_BLK_DEV_SD=m
-CONFIG_CHR_DEV_ST=m
+CONFIG_BLK_DEV_SD=y
+CONFIG_CHR_DEV_ST=y
 CONFIG_CHR_DEV_OSST=m
 CONFIG_BLK_DEV_SR=m
 CONFIG_BLK_DEV_SR_VENDOR=y
@@ -1573,7 +1573,7 @@ CONFIG_AIC94XX_DEBUG=y
 # CONFIG_SCSI_HISI_SAS is not set
 CONFIG_SCSI_MVSAS=m
 CONFIG_SCSI_MVSAS_DEBUG=y
-# CONFIG_SCSI_MVSAS_TASKLET is not set
+CONFIG_SCSI_MVSAS_TASKLET=y
 CONFIG_SCSI_MVUMI=m
 CONFIG_SCSI_DPT_I2O=m
 CONFIG_SCSI_ADVANSYS=m
@@ -1595,9 +1595,9 @@ CONFIG_SCSI_UFSHCD_PCI=m
 CONFIG_SCSI_UFSHCD_PLATFORM=m
 # CONFIG_SCSI_UFS_DWC_TC_PLATFORM is not set
 CONFIG_SCSI_HPTIOP=m
-CONFIG_SCSI_BUSLOGIC=m
+CONFIG_SCSI_BUSLOGIC=y
 CONFIG_SCSI_FLASHPOINT=y
-CONFIG_VMWARE_PVSCSI=m
+CONFIG_VMWARE_PVSCSI=y
 CONFIG_XEN_SCSI_FRONTEND=m
 CONFIG_HYPERV_STORAGE=m
 CONFIG_LIBFC=m
@@ -1671,10 +1671,10 @@ CONFIG_SATA_PMP=y
 #
 CONFIG_SATA_AHCI=y
 CONFIG_SATA_AHCI_PLATFORM=y
-# CONFIG_AHCI_IMX is not set
+CONFIG_AHCI_IMX=m
 CONFIG_AHCI_CEVA=m
 CONFIG_AHCI_QORIQ=m
-CONFIG_SATA_INIC162X=y
+# CONFIG_SATA_INIC162X is not set
 CONFIG_SATA_ACARD_AHCI=m
 # CONFIG_SATA_SIL24 is not set
 CONFIG_ATA_SFF=y
@@ -1691,17 +1691,19 @@ CONFIG_ATA_BMDMA=y
 # SATA SFF controllers with BMDMA
 #
 CONFIG_ATA_PIIX=y
-# CONFIG_SATA_DWC is not set
+CONFIG_SATA_DWC=m
+CONFIG_SATA_DWC_OLD_DMA=y
+# CONFIG_SATA_DWC_DEBUG is not set
 CONFIG_SATA_HIGHBANK=m
-CONFIG_SATA_MV=m
-CONFIG_SATA_NV=m
+CONFIG_SATA_MV=y
+CONFIG_SATA_NV=y
 CONFIG_SATA_PROMISE=m
 CONFIG_SATA_RCAR=m
 CONFIG_SATA_SIL=m
-CONFIG_SATA_SIS=m
+CONFIG_SATA_SIS=y
 CONFIG_SATA_SVW=m
 CONFIG_SATA_ULI=m
-CONFIG_SATA_VIA=m
+CONFIG_SATA_VIA=y
 CONFIG_SATA_VITESSE=m
 
 #
@@ -1717,14 +1719,14 @@ CONFIG_PATA_CMD64X=m
 CONFIG_PATA_CS5520=m
 CONFIG_PATA_CS5530=m
 CONFIG_PATA_CS5536=m
-CONFIG_PATA_CYPRESS=m
+# CONFIG_PATA_CYPRESS is not set
 CONFIG_PATA_EFAR=m
 CONFIG_PATA_HPT366=m
 CONFIG_PATA_HPT37X=m
 CONFIG_PATA_HPT3X2N=m
 CONFIG_PATA_HPT3X3=m
 CONFIG_PATA_HPT3X3_DMA=y
-CONFIG_PATA_IT8213=m
+# CONFIG_PATA_IT8213 is not set
 CONFIG_PATA_IT821X=m
 CONFIG_PATA_JMICRON=m
 CONFIG_PATA_MARVELL=m
@@ -1732,7 +1734,7 @@ CONFIG_PATA_NETCELL=m
 CONFIG_PATA_NINJA32=m
 CONFIG_PATA_NS87415=m
 CONFIG_PATA_OLDPIIX=y
-CONFIG_PATA_OPTIDMA=m
+# CONFIG_PATA_OPTIDMA is not set
 CONFIG_PATA_PDC2027X=m
 CONFIG_PATA_PDC_OLD=m
 CONFIG_PATA_RADISYS=m
@@ -1741,19 +1743,19 @@ CONFIG_PATA_SC1200=m
 CONFIG_PATA_SCH=y
 CONFIG_PATA_SERVERWORKS=m
 CONFIG_PATA_SIL680=m
-CONFIG_PATA_SIS=m
-CONFIG_PATA_TOSHIBA=m
+CONFIG_PATA_SIS=y
+CONFIG_PATA_TOSHIBA=y
 CONFIG_PATA_TRIFLEX=m
-CONFIG_PATA_VIA=m
+CONFIG_PATA_VIA=y
 CONFIG_PATA_WINBOND=m
 
 #
 # PIO-only SFF controllers
 #
-CONFIG_PATA_CMD640_PCI=y
+# CONFIG_PATA_CMD640_PCI is not set
 CONFIG_PATA_MPIIX=y
 CONFIG_PATA_NS87410=m
-CONFIG_PATA_OPTI=m
+# CONFIG_PATA_OPTI is not set
 CONFIG_PATA_PCMCIA=m
 CONFIG_PATA_PLATFORM=m
 CONFIG_PATA_OF_PLATFORM=m
@@ -1762,7 +1764,7 @@ CONFIG_PATA_RZ1000=m
 #
 # Generic fallback / legacy drivers
 #
-CONFIG_PATA_ACPI=m
+# CONFIG_PATA_ACPI is not set
 CONFIG_ATA_GENERIC=y
 # CONFIG_PATA_LEGACY is not set
 CONFIG_MD=y
@@ -2226,10 +2228,6 @@ CONFIG_SLHC=m
 # CONFIG_SLIP_COMPRESSED is not set
 # CONFIG_SLIP_SMART is not set
 # CONFIG_SLIP_MODE_SLIP6 is not set
-
-#
-# Host-side USB support is needed for USB Network Adapter support
-#
 CONFIG_USB_NET_DRIVERS=m
 # CONFIG_USB_CATC is not set
 # CONFIG_USB_KAWETH is not set
@@ -4145,7 +4143,6 @@ CONFIG_DVB_SMIPCIE=m
 CONFIG_DVB_NETUP_UNIDVB=m
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_CAFE_CCIC=m
-# CONFIG_VIDEO_VIA_CAMERA is not set
 CONFIG_VIDEO_DAVINCI_VPIF_DISPLAY=m
 CONFIG_VIDEO_DAVINCI_VPIF_CAPTURE=m
 CONFIG_VIDEO_DM6446_CCDC=m
@@ -4774,7 +4771,6 @@ CONFIG_FB_HGA=m
 CONFIG_FB_OPENCORES=m
 CONFIG_FB_S1D13XXX=m
 CONFIG_FB_NVIDIA=m
-CONFIG_FB_EFI=y
 CONFIG_FB_NVIDIA_I2C=y
 # CONFIG_FB_NVIDIA_DEBUG is not set
 CONFIG_FB_NVIDIA_BACKLIGHT=y
@@ -4786,8 +4782,8 @@ CONFIG_FB_I740=m
 CONFIG_FB_LE80578=m
 CONFIG_FB_CARILLO_RANCH=m
 CONFIG_FB_MATROX=m
-# CONFIG_FB_MATROX_MILLENIUM is not set
-# CONFIG_FB_MATROX_MYSTIQUE is not set
+CONFIG_FB_MATROX_MILLENIUM=y
+CONFIG_FB_MATROX_MYSTIQUE=y
 # CONFIG_FB_MATROX_G is not set
 # CONFIG_FB_MATROX_I2C is not set
 CONFIG_FB_RADEON=m
@@ -4798,7 +4794,7 @@ CONFIG_FB_ATY128=m
 CONFIG_FB_ATY128_BACKLIGHT=y
 CONFIG_FB_ATY=m
 # CONFIG_FB_ATY_CT is not set
-# CONFIG_FB_ATY_GX is not set
+CONFIG_FB_ATY_GX=y
 CONFIG_FB_ATY_BACKLIGHT=y
 CONFIG_FB_S3=m
 CONFIG_FB_S3_DDC=y
@@ -4808,9 +4804,7 @@ CONFIG_FB_SAVAGE=m
 CONFIG_FB_SIS=m
 CONFIG_FB_SIS_300=y
 # CONFIG_FB_SIS_315 is not set
-CONFIG_FB_VIA=m
-# CONFIG_FB_VIA_DIRECT_PROCFS is not set
-# CONFIG_FB_VIA_X_COMPATIBILITY is not set
+# CONFIG_FB_VIA is not set
 CONFIG_FB_NEOMAGIC=m
 CONFIG_FB_KYRO=m
 CONFIG_FB_3DFX=m
@@ -4825,9 +4819,9 @@ CONFIG_FB_CARMINE=m
 CONFIG_FB_CARMINE_DRAM_EVAL=y
 # CONFIG_CARMINE_DRAM_CUSTOM is not set
 CONFIG_FB_GEODE=y
-# CONFIG_FB_GEODE_LX is not set
-# CONFIG_FB_GEODE_GX is not set
-# CONFIG_FB_GEODE_GX1 is not set
+CONFIG_FB_GEODE_LX=m
+CONFIG_FB_GEODE_GX=m
+CONFIG_FB_GEODE_GX1=m
 CONFIG_FB_TMIO=m
 CONFIG_FB_TMIO_ACCELL=y
 CONFIG_FB_SM501=m
@@ -4904,7 +4898,7 @@ CONFIG_VGA_CONSOLE=y
 CONFIG_DUMMY_CONSOLE=y
 CONFIG_DUMMY_CONSOLE_COLUMNS=80
 CONFIG_DUMMY_CONSOLE_ROWS=25
-CONFIG_FRAMEBUFFER_CONSOLE=y
+CONFIG_FRAMEBUFFER_CONSOLE=m
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
 CONFIG_LOGO=y
@@ -5630,7 +5624,7 @@ CONFIG_USB_OHCI_LITTLE_ENDIAN=y
 CONFIG_USB_SUPPORT=y
 CONFIG_USB_COMMON=y
 CONFIG_USB_ARCH_HAS_HCD=y
-CONFIG_USB=m
+CONFIG_USB=y
 CONFIG_USB_PCI=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 
@@ -5642,10 +5636,10 @@ CONFIG_USB_DEFAULT_PERSIST=y
 CONFIG_USB_OTG=y
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
-CONFIG_USB_OTG_FSM=m
-CONFIG_USB_LEDS_TRIGGER_USBPORT=m
-CONFIG_USB_MON=m
-# CONFIG_USB_WUSB is not set
+CONFIG_USB_OTG_FSM=y
+CONFIG_USB_LEDS_TRIGGER_USBPORT=y
+CONFIG_USB_MON=y
+CONFIG_USB_WUSB=m
 CONFIG_USB_WUSB_CBAF=m
 # CONFIG_USB_WUSB_CBAF_DEBUG is not set
 
@@ -5653,32 +5647,34 @@ CONFIG_USB_WUSB_CBAF=m
 # USB Host Controller Drivers
 #
 CONFIG_USB_C67X00_HCD=m
-CONFIG_USB_XHCI_HCD=m
-CONFIG_USB_XHCI_PCI=m
-CONFIG_USB_XHCI_PLATFORM=m
-CONFIG_USB_XHCI_MTK=m
-CONFIG_USB_XHCI_MVEBU=m
-# CONFIG_USB_XHCI_RCAR is not set
-CONFIG_USB_EHCI_HCD=m
+CONFIG_USB_XHCI_HCD=y
+CONFIG_USB_XHCI_PCI=y
+CONFIG_USB_XHCI_PLATFORM=y
+CONFIG_USB_XHCI_MTK=y
+CONFIG_USB_XHCI_MVEBU=y
+CONFIG_USB_XHCI_RCAR=y
+CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_ROOT_HUB_TT=y
 CONFIG_USB_EHCI_TT_NEWSCHED=y
-CONFIG_USB_EHCI_PCI=m
+CONFIG_USB_EHCI_PCI=y
 CONFIG_USB_EHCI_HCD_PLATFORM=m
 CONFIG_USB_OXU210HP_HCD=m
 CONFIG_USB_ISP116X_HCD=m
 CONFIG_USB_ISP1362_HCD=m
 CONFIG_USB_FOTG210_HCD=m
 CONFIG_USB_MAX3421_HCD=m
-# CONFIG_USB_OHCI_HCD is not set
-CONFIG_USB_UHCI_HCD=m
+CONFIG_USB_OHCI_HCD=y
+CONFIG_USB_OHCI_HCD_PCI=y
+CONFIG_USB_OHCI_HCD_PLATFORM=y
+CONFIG_USB_UHCI_HCD=y
 CONFIG_USB_U132_HCD=m
 CONFIG_USB_SL811_HCD=m
 CONFIG_USB_SL811_HCD_ISO=y
-# CONFIG_USB_SL811_CS is not set
+CONFIG_USB_SL811_CS=m
 CONFIG_USB_R8A66597_HCD=m
 CONFIG_USB_RENESAS_USBHS_HCD=m
-# CONFIG_USB_WHCI_HCD is not set
-# CONFIG_USB_HWA_HCD is not set
+CONFIG_USB_WHCI_HCD=m
+CONFIG_USB_HWA_HCD=m
 CONFIG_USB_HCD_SSB=m
 CONFIG_USB_HCD_TEST_MODE=y
 CONFIG_USB_RENESAS_USBHS=m
@@ -5686,10 +5682,10 @@ CONFIG_USB_RENESAS_USBHS=m
 #
 # USB Device Class drivers
 #
-CONFIG_USB_ACM=m
-CONFIG_USB_PRINTER=m
-CONFIG_USB_WDM=m
-CONFIG_USB_TMC=m
+CONFIG_USB_ACM=y
+CONFIG_USB_PRINTER=y
+CONFIG_USB_WDM=y
+CONFIG_USB_TMC=y
 
 #
 # NOTE: USB_STORAGE depends on SCSI but BLK_DEV_SD may
@@ -5698,7 +5694,7 @@ CONFIG_USB_TMC=m
 #
 # also be needed; see USB_STORAGE Help for more info
 #
-CONFIG_USB_STORAGE=m
+CONFIG_USB_STORAGE=y
 # CONFIG_USB_STORAGE_DEBUG is not set
 CONFIG_USB_STORAGE_REALTEK=m
 CONFIG_REALTEK_AUTOPM=y
@@ -5874,7 +5870,7 @@ CONFIG_USB_HSIC_USB3503=m
 CONFIG_USB_HSIC_USB4604=m
 CONFIG_USB_LINK_LAYER_TEST=m
 CONFIG_USB_CHAOSKEY=m
-CONFIG_UCSI=m
+CONFIG_UCSI=y
 
 #
 # USB Physical Layer drivers
@@ -5886,7 +5882,7 @@ CONFIG_USB_PHY=y
 # CONFIG_USB_ISP1301 is not set
 # CONFIG_USB_MSM_OTG is not set
 # CONFIG_USB_QCOM_8X16_PHY is not set
-CONFIG_USB_GADGET=m
+CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
 # CONFIG_USB_GADGET_DEBUG_FS is not set
@@ -7516,10 +7512,10 @@ CONFIG_NVMEM_BCM_OCOTP=m
 CONFIG_NVMEM_VF610_OCOTP=m
 # CONFIG_STM is not set
 CONFIG_INTEL_TH=y
-CONFIG_INTEL_TH_PCI=m
-CONFIG_INTEL_TH_GTH=m
-CONFIG_INTEL_TH_MSU=m
-CONFIG_INTEL_TH_PTI=m
+CONFIG_INTEL_TH_PCI=y
+CONFIG_INTEL_TH_GTH=y
+CONFIG_INTEL_TH_MSU=y
+CONFIG_INTEL_TH_PTI=y
 CONFIG_INTEL_TH_DEBUG=y
 
 #
@@ -7564,16 +7560,16 @@ CONFIG_GOOGLE_VPD=m
 #
 # EFI (Extensible Firmware Interface) Support
 #
-CONFIG_EFI_VARS=m
+CONFIG_EFI_VARS=y
 CONFIG_EFI_ESRT=y
 CONFIG_EFI_VARS_PSTORE=m
 # CONFIG_EFI_VARS_PSTORE_DEFAULT_DISABLE is not set
 CONFIG_EFI_FAKE_MEMMAP=y
 CONFIG_EFI_MAX_FAKE_MEM=8
 CONFIG_EFI_RUNTIME_WRAPPERS=y
-CONFIG_EFI_BOOTLOADER_CONTROL=m
-CONFIG_EFI_CAPSULE_LOADER=m
-CONFIG_EFI_TEST=m
+CONFIG_EFI_BOOTLOADER_CONTROL=y
+CONFIG_EFI_CAPSULE_LOADER=y
+CONFIG_EFI_TEST=y
 CONFIG_APPLE_PROPERTIES=y
 CONFIG_EFI_DEV_PATH_PARSER=y
 
