--- a/clfs_sysvinit_20170702_x86_64_multilib/chroot/sources/kernel.conf
+++ b/clfs_sysvinit_20170702_x86_64_multilib/chroot/sources/kernel.conf
@@ -2884,21 +2884,21 @@ CONFIG_SERIO=y
 CONFIG_ARCH_MIGHT_HAVE_PC_SERIO=y
 CONFIG_SERIO_I8042=y
 CONFIG_SERIO_SERPORT=y
-# CONFIG_SERIO_CT82C710 is not set
-# CONFIG_SERIO_PARKBD is not set
+CONFIG_SERIO_CT82C710=m
+CONFIG_SERIO_PARKBD=m
 CONFIG_SERIO_PCIPS2=y
 CONFIG_SERIO_LIBPS2=y
-# CONFIG_SERIO_RAW is not set
-# CONFIG_SERIO_ALTERA_PS2 is not set
-# CONFIG_SERIO_PS2MULT is not set
-# CONFIG_SERIO_ARC_PS2 is not set
-# CONFIG_SERIO_APBPS2 is not set
-# CONFIG_USERIO is not set
+CONFIG_SERIO_RAW=y
+CONFIG_SERIO_ALTERA_PS2=m
+CONFIG_SERIO_PS2MULT=m
+CONFIG_SERIO_ARC_PS2=m
+CONFIG_SERIO_APBPS2=m
+CONFIG_USERIO=m
 CONFIG_GAMEPORT=m
-# CONFIG_GAMEPORT_NS558 is not set
-# CONFIG_GAMEPORT_L4 is not set
-# CONFIG_GAMEPORT_EMU10K1 is not set
-# CONFIG_GAMEPORT_FM801 is not set
+CONFIG_GAMEPORT_NS558=m
+CONFIG_GAMEPORT_L4=m
+CONFIG_GAMEPORT_EMU10K1=m
+CONFIG_GAMEPORT_FM801=m
 
 #
 # Character devices
@@ -6275,16 +6275,16 @@ CONFIG_SPEAKUP_SYNTH_TXPRT=m
 CONFIG_SPEAKUP_SYNTH_DUMMY=m
 CONFIG_STAGING_MEDIA=y
 CONFIG_INTEL_ATOMISP=y
-# CONFIG_VIDEO_ATOMISP is not set
-# CONFIG_VIDEO_OV5693 is not set
-# CONFIG_VIDEO_OV2722 is not set
-# CONFIG_VIDEO_GC2235 is not set
-# CONFIG_VIDEO_MSRLIST_HELPER is not set
-# CONFIG_VIDEO_MT9M114 is not set
-# CONFIG_VIDEO_AP1302 is not set
-# CONFIG_VIDEO_GC0310 is not set
-# CONFIG_VIDEO_OV2680 is not set
-# CONFIG_VIDEO_LM3554 is not set
+CONFIG_VIDEO_ATOMISP=m
+CONFIG_VIDEO_OV5693=y
+CONFIG_VIDEO_OV2722=m
+CONFIG_VIDEO_GC2235=m
+CONFIG_VIDEO_MSRLIST_HELPER=m
+CONFIG_VIDEO_MT9M114=m
+CONFIG_VIDEO_AP1302=m
+CONFIG_VIDEO_GC0310=m
+CONFIG_VIDEO_OV2680=m
+CONFIG_VIDEO_LM3554=m
 CONFIG_I2C_BCM2048=m
 CONFIG_DVB_CXD2099=m
 
