--- a/clfs_sysvinit_20170702_x86_64_multilib/chroot/sources/kernel.conf
+++ b/clfs_sysvinit_20170702_x86_64_multilib/chroot/sources/kernel.conf
@@ -1270,6 +1270,8 @@ CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=m
 CONFIG_BT_HS=y
 CONFIG_BT_LE=y
+CONFIG_BT_QCA=y
+CONFIG_BT_BTBCM=y
 CONFIG_BT_LEDS=y
 CONFIG_BT_SELFTEST=y
 # CONFIG_BT_SELFTEST_ECDH is not set
@@ -3572,62 +3574,62 @@ CONFIG_WATCHDOG=y
 #
 # Watchdog Device Drivers
 #
-# CONFIG_SOFT_WATCHDOG is not set
-# CONFIG_DA9052_WATCHDOG is not set
-# CONFIG_DA9055_WATCHDOG is not set
-# CONFIG_DA9063_WATCHDOG is not set
-# CONFIG_DA9062_WATCHDOG is not set
-# CONFIG_GPIO_WATCHDOG is not set
-# CONFIG_MENF21BMC_WATCHDOG is not set
-# CONFIG_WDAT_WDT is not set
-# CONFIG_WM831X_WATCHDOG is not set
-# CONFIG_WM8350_WATCHDOG is not set
-# CONFIG_XILINX_WATCHDOG is not set
-# CONFIG_ZIIRAVE_WATCHDOG is not set
-# CONFIG_CADENCE_WATCHDOG is not set
-# CONFIG_DW_WATCHDOG is not set
-# CONFIG_RN5T618_WATCHDOG is not set
-# CONFIG_TWL4030_WATCHDOG is not set
-# CONFIG_MAX63XX_WATCHDOG is not set
-# CONFIG_MAX77620_WATCHDOG is not set
-# CONFIG_RETU_WATCHDOG is not set
-# CONFIG_ACQUIRE_WDT is not set
-# CONFIG_ADVANTECH_WDT is not set
-# CONFIG_ALIM1535_WDT is not set
-# CONFIG_ALIM7101_WDT is not set
-# CONFIG_F71808E_WDT is not set
-# CONFIG_SP5100_TCO is not set
-# CONFIG_SBC_FITPC2_WATCHDOG is not set
-# CONFIG_EUROTECH_WDT is not set
-# CONFIG_IB700_WDT is not set
-# CONFIG_IBMASR is not set
-# CONFIG_WAFER_WDT is not set
-# CONFIG_I6300ESB_WDT is not set
-# CONFIG_IE6XX_WDT is not set
-# CONFIG_INTEL_SCU_WATCHDOG is not set
-# CONFIG_INTEL_MID_WATCHDOG is not set
-# CONFIG_ITCO_WDT is not set
-# CONFIG_IT8712F_WDT is not set
-# CONFIG_IT87_WDT is not set
-# CONFIG_HP_WATCHDOG is not set
-# CONFIG_KEMPLD_WDT is not set
-# CONFIG_SC1200_WDT is not set
-# CONFIG_PC87413_WDT is not set
-# CONFIG_NV_TCO is not set
-# CONFIG_60XX_WDT is not set
-# CONFIG_CPU5_WDT is not set
-# CONFIG_SMSC_SCH311X_WDT is not set
-# CONFIG_SMSC37B787_WDT is not set
-# CONFIG_VIA_WDT is not set
-# CONFIG_W83627HF_WDT is not set
-# CONFIG_W83877F_WDT is not set
-# CONFIG_W83977F_WDT is not set
-# CONFIG_MACHZ_WDT is not set
-# CONFIG_SBC_EPX_C3_WATCHDOG is not set
-# CONFIG_INTEL_MEI_WDT is not set
-# CONFIG_NI903X_WDT is not set
-# CONFIG_NIC7018_WDT is not set
-# CONFIG_MEN_A21_WDT is not set
+# CONFIG_SOFT_WATCHDOG=m
+# CONFIG_DA9052_WATCHDOG=m
+# CONFIG_DA9055_WATCHDOG=m
+# CONFIG_DA9063_WATCHDOG=m
+# CONFIG_DA9062_WATCHDOG=m
+# CONFIG_GPIO_WATCHDOG=m
+# CONFIG_MENF21BMC_WATCHDOG=m
+# CONFIG_WDAT_WDT=m
+# CONFIG_WM831X_WATCHDOG=m
+# CONFIG_WM8350_WATCHDOG=m
+# CONFIG_XILINX_WATCHDOG=m
+# CONFIG_ZIIRAVE_WATCHDOG=m
+# CONFIG_CADENCE_WATCHDOG=m
+# CONFIG_DW_WATCHDOG=m
+# CONFIG_RN5T618_WATCHDOG=m
+# CONFIG_TWL4030_WATCHDOG=m
+# CONFIG_MAX63XX_WATCHDOG=m
+# CONFIG_MAX77620_WATCHDOG=m
+# CONFIG_RETU_WATCHDOG=m
+# CONFIG_ACQUIRE_WDT=m
+# CONFIG_ADVANTECH_WDT=m
+# CONFIG_ALIM1535_WDT=m
+# CONFIG_ALIM7101_WDT=m
+# CONFIG_F71808E_WDT=m
+# CONFIG_SP5100_TCO=m
+# CONFIG_SBC_FITPC2_WATCHDOG=m
+# CONFIG_EUROTECH_WDT=m
+# CONFIG_IB700_WDT=m
+# CONFIG_IBMASR=m
+# CONFIG_WAFER_WDT=m
+# CONFIG_I6300ESB_WDT=m
+# CONFIG_IE6XX_WDT=m
+# CONFIG_INTEL_SCU_WATCHDOG=m
+# CONFIG_INTEL_MID_WATCHDOG=m
+CONFIG_ITCO_WDT=y
+# CONFIG_IT8712F_WDT=m
+# CONFIG_IT87_WDT=m
+# CONFIG_HP_WATCHDOG=m
+# CONFIG_KEMPLD_WDT=m
+# CONFIG_SC1200_WDT=m
+# CONFIG_PC87413_WDT=m
+# CONFIG_NV_TCO=m
+# CONFIG_60XX_WDT=m
+# CONFIG_CPU5_WDT=m
+# CONFIG_SMSC_SCH311X_WDT=m
+# CONFIG_SMSC37B787_WDT=m
+# CONFIG_VIA_WDT=m
+# CONFIG_W83627HF_WDT=m
+# CONFIG_W83877F_WDT=m
+# CONFIG_W83977F_WDT=m
+# CONFIG_MACHZ_WDT=m
+# CONFIG_SBC_EPX_C3_WATCHDOG=m
+# CONFIG_INTEL_MEI_WDT=m
+# CONFIG_NI903X_WDT=m
+# CONFIG_NIC7018_WDT=m
+# CONFIG_MEN_A21_WDT=m
 
 #
 # PCI-based Watchdog Cards
@@ -7351,10 +7353,11 @@ CONFIG_CRYPTO_SHA1=y
 # CONFIG_CRYPTO_SHA512_MB is not set
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA512=m
+CONFIG_CRYPTO_SIMD=y
 # CONFIG_CRYPTO_SHA3 is not set
 # CONFIG_CRYPTO_TGR192 is not set
 # CONFIG_CRYPTO_WP512 is not set
-# CONFIG_CRYPTO_GHASH_CLMUL_NI_INTEL is not set
+CONFIG_CRYPTO_GHASH_CLMUL_NI_INTEL=y
 
 #
 # Ciphers
