--- a/clfs_sysvinit_20170702_x86_64_multilib/chroot/sources/kernel.conf
+++ b/clfs_sysvinit_20170702_x86_64_multilib/chroot/sources/kernel.conf
@@ -676,6 +676,7 @@ CONFIG_HAVE_ACPI_APEI=y
 CONFIG_HAVE_ACPI_APEI_NMI=y
 # CONFIG_ACPI_APEI is not set
 # CONFIG_DPTF_POWER is not set
+CONFIG_ACPI_WATCHDOG=y
 # CONFIG_ACPI_EXTLOG is not set
 # CONFIG_PMIC_OPREGION is not set
 CONFIG_ACPI_CONFIGFS=m
@@ -1270,8 +1271,6 @@ CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=m
 CONFIG_BT_HS=y
 CONFIG_BT_LE=y
-CONFIG_BT_QCA=y
-CONFIG_BT_BTBCM=y
 CONFIG_BT_LEDS=y
 CONFIG_BT_SELFTEST=y
 # CONFIG_BT_SELFTEST_ECDH is not set
@@ -3229,6 +3228,7 @@ CONFIG_PINCTRL=y
 CONFIG_GPIOLIB=y
 CONFIG_OF_GPIO=y
 CONFIG_GPIO_ACPI=y
+CONFIG_GPIOLIB_IRQCHIP=y
 # CONFIG_DEBUG_GPIO is not set
 # CONFIG_GPIO_SYSFS is not set
 
@@ -3298,6 +3298,7 @@ CONFIG_GPIO_ACPI=y
 # CONFIG_GPIO_TWL4030 is not set
 # CONFIG_GPIO_TWL6040 is not set
 # CONFIG_GPIO_UCB1400 is not set
+CONFIG_GPIO_WHISKEY_COVE=m
 # CONFIG_GPIO_WM831X is not set
 # CONFIG_GPIO_WM8350 is not set
 # CONFIG_GPIO_WM8994 is not set
@@ -3549,7 +3550,7 @@ CONFIG_THERMAL_DEFAULT_GOV_STEP_WISE=y
 # CONFIG_THERMAL_DEFAULT_GOV_POWER_ALLOCATOR is not set
 # CONFIG_THERMAL_GOV_FAIR_SHARE is not set
 CONFIG_THERMAL_GOV_STEP_WISE=y
-# CONFIG_THERMAL_GOV_BANG_BANG is not set
+CONFIG_THERMAL_GOV_BANG_BANG=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
 # CONFIG_THERMAL_GOV_POWER_ALLOCATOR is not set
 # CONFIG_CPU_THERMAL is not set
@@ -3565,71 +3566,74 @@ CONFIG_X86_PKG_TEMP_THERMAL=m
 # ACPI INT340X thermal drivers
 #
 # CONFIG_INT340X_THERMAL is not set
+CONFIG_INTEL_BXT_PMIC_THERMAL=m
 # CONFIG_INTEL_PCH_THERMAL is not set
 CONFIG_WATCHDOG=y
-# CONFIG_WATCHDOG_CORE is not set
+CONFIG_WATCHDOG_CORE=y
 # CONFIG_WATCHDOG_NOWAYOUT is not set
 # CONFIG_WATCHDOG_SYSFS is not set
 
 #
 # Watchdog Device Drivers
 #
-# CONFIG_SOFT_WATCHDOG=m
-# CONFIG_DA9052_WATCHDOG=m
-# CONFIG_DA9055_WATCHDOG=m
-# CONFIG_DA9063_WATCHDOG=m
-# CONFIG_DA9062_WATCHDOG=m
-# CONFIG_GPIO_WATCHDOG=m
-# CONFIG_MENF21BMC_WATCHDOG=m
-# CONFIG_WDAT_WDT=m
-# CONFIG_WM831X_WATCHDOG=m
-# CONFIG_WM8350_WATCHDOG=m
-# CONFIG_XILINX_WATCHDOG=m
-# CONFIG_ZIIRAVE_WATCHDOG=m
-# CONFIG_CADENCE_WATCHDOG=m
-# CONFIG_DW_WATCHDOG=m
-# CONFIG_RN5T618_WATCHDOG=m
-# CONFIG_TWL4030_WATCHDOG=m
-# CONFIG_MAX63XX_WATCHDOG=m
-# CONFIG_MAX77620_WATCHDOG=m
-# CONFIG_RETU_WATCHDOG=m
-# CONFIG_ACQUIRE_WDT=m
-# CONFIG_ADVANTECH_WDT=m
-# CONFIG_ALIM1535_WDT=m
-# CONFIG_ALIM7101_WDT=m
-# CONFIG_F71808E_WDT=m
-# CONFIG_SP5100_TCO=m
-# CONFIG_SBC_FITPC2_WATCHDOG=m
-# CONFIG_EUROTECH_WDT=m
-# CONFIG_IB700_WDT=m
-# CONFIG_IBMASR=m
-# CONFIG_WAFER_WDT=m
-# CONFIG_I6300ESB_WDT=m
-# CONFIG_IE6XX_WDT=m
-# CONFIG_INTEL_SCU_WATCHDOG=m
-# CONFIG_INTEL_MID_WATCHDOG=m
+CONFIG_SOFT_WATCHDOG=m
+CONFIG_DA9052_WATCHDOG=m
+CONFIG_DA9055_WATCHDOG=m
+CONFIG_DA9063_WATCHDOG=m
+CONFIG_DA9062_WATCHDOG=m
+CONFIG_GPIO_WATCHDOG=m
+CONFIG_MENF21BMC_WATCHDOG=m
+CONFIG_WDAT_WDT=m
+CONFIG_WM831X_WATCHDOG=m
+CONFIG_WM8350_WATCHDOG=m
+CONFIG_XILINX_WATCHDOG=m
+CONFIG_ZIIRAVE_WATCHDOG=m
+CONFIG_CADENCE_WATCHDOG=m
+CONFIG_DW_WATCHDOG=m
+CONFIG_RN5T618_WATCHDOG=m
+CONFIG_TWL4030_WATCHDOG=m
+CONFIG_MAX63XX_WATCHDOG=m
+CONFIG_MAX77620_WATCHDOG=m
+CONFIG_RETU_WATCHDOG=m
+CONFIG_ACQUIRE_WDT=m
+CONFIG_ADVANTECH_WDT=m
+CONFIG_ALIM1535_WDT=m
+CONFIG_ALIM7101_WDT=m
+CONFIG_F71808E_WDT=m
+CONFIG_SP5100_TCO=m
+CONFIG_SBC_FITPC2_WATCHDOG=m
+CONFIG_EUROTECH_WDT=m
+CONFIG_IB700_WDT=m
+CONFIG_IBMASR=m
+CONFIG_WAFER_WDT=m
+CONFIG_I6300ESB_WDT=m
+CONFIG_IE6XX_WDT=m
+CONFIG_INTEL_SCU_WATCHDOG=y
+CONFIG_INTEL_MID_WATCHDOG=m
 CONFIG_ITCO_WDT=y
-# CONFIG_IT8712F_WDT=m
-# CONFIG_IT87_WDT=m
-# CONFIG_HP_WATCHDOG=m
-# CONFIG_KEMPLD_WDT=m
-# CONFIG_SC1200_WDT=m
-# CONFIG_PC87413_WDT=m
-# CONFIG_NV_TCO=m
-# CONFIG_60XX_WDT=m
-# CONFIG_CPU5_WDT=m
-# CONFIG_SMSC_SCH311X_WDT=m
-# CONFIG_SMSC37B787_WDT=m
-# CONFIG_VIA_WDT=m
-# CONFIG_W83627HF_WDT=m
-# CONFIG_W83877F_WDT=m
-# CONFIG_W83977F_WDT=m
-# CONFIG_MACHZ_WDT=m
-# CONFIG_SBC_EPX_C3_WATCHDOG=m
-# CONFIG_INTEL_MEI_WDT=m
-# CONFIG_NI903X_WDT=m
-# CONFIG_NIC7018_WDT=m
-# CONFIG_MEN_A21_WDT=m
+CONFIG_ITCO_VENDOR_SUPPORT=y
+CONFIG_IT8712F_WDT=m
+CONFIG_IT87_WDT=m
+CONFIG_HP_WATCHDOG=m
+CONFIG_KEMPLD_WDT=m
+CONFIG_HPWDT_NMI_DECODING=y
+CONFIG_SC1200_WDT=m
+CONFIG_PC87413_WDT=m
+CONFIG_NV_TCO=m
+CONFIG_60XX_WDT=m
+CONFIG_CPU5_WDT=m
+CONFIG_SMSC_SCH311X_WDT=m
+CONFIG_SMSC37B787_WDT=m
+CONFIG_VIA_WDT=m
+CONFIG_W83627HF_WDT=m
+CONFIG_W83877F_WDT=m
+CONFIG_W83977F_WDT=m
+CONFIG_MACHZ_WDT=m
+CONFIG_SBC_EPX_C3_WATCHDOG=m
+CONFIG_INTEL_MEI_WDT=m
+CONFIG_NI903X_WDT=m
+CONFIG_NIC7018_WDT=m
+CONFIG_MEN_A21_WDT=m
 
 #
 # PCI-based Watchdog Cards
@@ -3715,6 +3719,7 @@ CONFIG_MFD_INTEL_QUARK_I2C_GPIO=y
 CONFIG_LPC_ICH=y
 CONFIG_LPC_SCH=y
 CONFIG_INTEL_SOC_PMIC=y
+CONFIG_INTEL_SOC_PMIC_BXTWC=m
 CONFIG_MFD_INTEL_LPSS=y
 CONFIG_MFD_INTEL_LPSS_ACPI=y
 CONFIG_MFD_INTEL_LPSS_PCI=y
@@ -4150,6 +4155,7 @@ CONFIG_MEDIA_PCI_SUPPORT=y
 #
 # Media capture support
 #
+CONFIG_VIDEO_MEYE=m
 CONFIG_VIDEO_SOLO6X10=m
 CONFIG_VIDEO_TW5864=m
 CONFIG_VIDEO_TW68=m
@@ -6279,8 +6285,10 @@ CONFIG_STAGING_MEDIA=y
 CONFIG_INTEL_ATOMISP=y
 CONFIG_VIDEO_ATOMISP=m
 CONFIG_VIDEO_OV5693=y
+CONFIG_VIDEO_IMX=m
 CONFIG_VIDEO_OV2722=m
 CONFIG_VIDEO_GC2235=m
+CONFIG_VIDEO_OV8858=m
 CONFIG_VIDEO_MSRLIST_HELPER=m
 CONFIG_VIDEO_MT9M114=m
 CONFIG_VIDEO_AP1302=m
@@ -6392,6 +6400,7 @@ CONFIG_ACER_WMI=m
 CONFIG_ACERHDF=m
 CONFIG_ALIENWARE_WMI=m
 CONFIG_ASUS_LAPTOP=m
+CONFIG_DELL_SMBIOS=m
 CONFIG_DELL_LAPTOP=m
 CONFIG_DELL_WMI=m
 CONFIG_DELL_WMI_AIO=m
@@ -6399,6 +6408,7 @@ CONFIG_DELL_WMI_LED=m
 CONFIG_DELL_SMO8800=m
 CONFIG_DELL_RBTN=m
 CONFIG_FUJITSU_LAPTOP=m
+# CONFIG_FUJITSU_LAPTOP_DEBUG is not set
 CONFIG_FUJITSU_TABLET=m
 CONFIG_AMILO_RFKILL=m
 CONFIG_HP_ACCEL=m
@@ -6408,13 +6418,22 @@ CONFIG_MSI_LAPTOP=m
 CONFIG_PANASONIC_LAPTOP=m
 CONFIG_COMPAL_LAPTOP=m
 CONFIG_SONY_LAPTOP=m
+CONFIG_SONYPI_COMPAT=y
 CONFIG_IDEAPAD_LAPTOP=m
 CONFIG_SURFACE3_WMI=m
 CONFIG_THINKPAD_ACPI=m
+CONFIG_THINKPAD_ACPI_ALSA_SUPPORT=y
+CONFIG_THINKPAD_ACPI_DEBUGFACILITIES=y
+CONFIG_THINKPAD_ACPI_DEBUG=y
+CONFIG_THINKPAD_ACPI_UNSAFE_LEDS=y
+CONFIG_THINKPAD_ACPI_VIDEO=y
+CONFIG_THINKPAD_ACPI_HOTKEY_POLL=y
 CONFIG_SENSORS_HDAPS=m
 CONFIG_INTEL_MENLOW=m
 CONFIG_EEEPC_LAPTOP=y
 CONFIG_ASUS_WMI=y
+CONFIG_ASUS_NB_WMI=y
+CONFIG_EEEPC_WMI=y
 CONFIG_ASUS_WIRELESS=y
 CONFIG_ACPI_WMI=y
 CONFIG_MSI_WMI=m
@@ -6442,14 +6461,16 @@ CONFIG_INTEL_RST=m
 CONFIG_INTEL_SMARTCONNECT=y
 CONFIG_PVPANIC=m
 CONFIG_INTEL_PMC_IPC=y
+CONFIG_INTEL_BXTWC_PMIC_TMU=m
 CONFIG_SURFACE_PRO3_BUTTON=m
 CONFIG_INTEL_PUNIT_IPC=m
+CONFIG_INTEL_TELEMETRY=m
 CONFIG_MLX_PLATFORM=m
 CONFIG_MLX_CPLD_PLATFORM=m
-CONFIG_INTEL_TURBO_MAX_3=m
-CONFIG_SILEAD_DMI=m
+CONFIG_INTEL_TURBO_MAX_3=y
+CONFIG_SILEAD_DMI=y
 CONFIG_PMC_ATOM=y
-CONFIG_GOLDFISH_BUS=m
+CONFIG_GOLDFISH_BUS=y
 CONFIG_GOLDFISH_PIPE=m
 CONFIG_CHROME_PLATFORMS=y
 CONFIG_CHROMEOS_LAPTOP=m
@@ -6707,7 +6728,7 @@ CONFIG_FSI=m
 # CONFIG_EDD is not set
 CONFIG_FIRMWARE_MEMMAP=y
 # CONFIG_DELL_RBU is not set
-# CONFIG_DCDBAS is not set
+CONFIG_DCDBAS=m
 CONFIG_DMIID=y
 # CONFIG_DMI_SYSFS is not set
 CONFIG_DMI_SCAN_MACHINE_NON_EFI_FALLBACK=y
@@ -7290,7 +7311,7 @@ CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_NULL2=y
 # CONFIG_CRYPTO_PCRYPT is not set
 CONFIG_CRYPTO_WORKQUEUE=y
-# CONFIG_CRYPTO_CRYPTD is not set
+CONFIG_CRYPTO_CRYPTD=y
 # CONFIG_CRYPTO_MCRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
 # CONFIG_CRYPTO_TEST is not set
@@ -7353,7 +7374,6 @@ CONFIG_CRYPTO_SHA1=y
 # CONFIG_CRYPTO_SHA512_MB is not set
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA512=m
-CONFIG_CRYPTO_SIMD=y
 # CONFIG_CRYPTO_SHA3 is not set
 # CONFIG_CRYPTO_TGR192 is not set
 # CONFIG_CRYPTO_WP512 is not set
